force-app/main/default/objects/custom_create145__c/custom_create145__c.object-meta.xml
<CustomObject>
    <label>Custom created object145</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects145</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>