force-app/main/default/objects/custom_create145__c/fields/custom_create_145field536__c.field-meta.xml
<CustomField>
    <fullName>custom_create_145field536__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 145field536</label>
    <type>Checkbox</type>
</CustomField>